Bug 475359 Fix ASSERTION: space only keyword r+sr=bienvenu